--- a/CodingDojo/games/minesweeper/src/main/webapp/resources/help/minesweeper.html
+++ b/CodingDojo/games/minesweeper/src/main/webapp/resources/help/minesweeper.html
@@ -28,11 +28,32 @@
     <link href="../css/custom.css" rel="stylesheet">
 
     <script src="../js/all.min.js"></script>
+    <style>
+        li {
+            display: inline;
+            list-style-type: none;
+            padding-right: 20px;
+        }
+        .language-list {
+          margin: 20px;
+          display: flex;
+          justify-content: center;
+        }
+    </style>
 </head>
 
 <body style="background-color: white;"
     class="single single-post postid-170 single-format-standard logged-in admin-bar singular one-column content customize-support">
     <div id="settings" page="rules"></div>
+    <div class="language-list">
+        <p style="padding-right: 10px">Languages:</p>
+        <ul>
+            <li><a href="/codenjoy-contest/resources/help/minesweeper-en.html">English</a></li>
+            <li><a href="/codenjoy-contest/resources/help/minesweeper-ru.html">Русский</a></li>
+            <li class="selected"><b>>>>Українська</b></li>
+        </ul>
+    </div>
+
     <div id="page" class="hfeed">
         <div id="main">
             <div id="primary">
